<resources>
    <string name="app_name">BinBill Partner</string>
    <string name="submit">Submit</string>
    <string name="sign_in">Sign In</string>
    <string name="error_field_cannot_be_empty">Field cannot be empty</string>
    <string name="error_incorrect_value">Incorrect Mobile Number</string>
    <string name="error_invalid_value">Invalid Value</string>
    <string name="location_text">For best results, zoom in google map to locate your exact shop location</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="share_location_header">Share Your Location</string>
    <string name="category_mainUpload"><u>Upload Inventories</u></string>
    <string name="mobile_number_asterisk">Mobile Number *</string>
    <string name="email_id">Email Id</string>
    <string name="share_location">Share location *</string>
    <string name="shop_name">Shop Name *</string>
    <string name="shop_number">Shop No</string>
    <string name="shop_pin">Enter Your Pin *</string>
    <string name="pan_number_asterisk">PAN Number *</string>
    <string name="or">OR</string>
    <string name="gstin_asterisk">GSTIN Number *</string>
    <string name="incorrect_pan_number">Incorrect PAN number</string>
    <string name="incorrect_email_address">Incorrect Email Address</string>
    <string name="incorrect_gstin_number">Invalid GSTIN Number</string>
    <string name="otp_header">Please enter the OTP sent on your registered mobile number.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="shop_name_asterisk">Shop Name *</string>
    <string name="business_name_asterisk">Business Name *</string>
    <string name="business_address_asterisk">Business Address *</string>
    <string name="pin_code">PIN Code</string>
    <string name="city">City</string>
    <string name="upload_shop_image">Upload Shop Image</string>
    <string name="main_category_asterisk">Main Category *</string>
    <string name="basic_details_1">Shop Details</string>
    <string name="incorrect_pincode">Incorrect PIN Code</string>
    <string name="basic_details_2">Shop Details</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="shop_open_days">Shop Open Days</string>
    <string name="choose_image"><u>Upload Image</u></string>
    <string name="shop_opening_timings">Shop Open Hours</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home_delivery_distance">Home Delivery Distance</string>
    <string name="km_0_2">0 – 2 km</string>
    <string name="available_payment_options">Available Payment Options</string>
    <string name="paytm">Paytm</string>
    <string name="cod">COD</string>
    <string name="pos">POS</string>
    <string name="credit_debit_card">Credit/ Debit Card</string>
    <string name="other_wallets">Other Wallets</string>
    <string name="business_details">Business Details</string>
    <string name="type_of_business_asterisk">Type of Business *</string>
    <string name="next">Next</string>
    <string name="shop_establishment_certificate"><![CDATA[Shops & Establishment Act Certificate]]></string>
    <string name="upload_file">Upload File</string>
    <string name="photo_of_business_pan">Photo of Business Pan Card for Verification</string>
    <string name="partnership_agreement">Partnership Agreement</string>
    <string name="udhyog_adhaar">Udhyog Adhaar</string>
    <string name="company_pan_card">Company Pan Card</string>
    <string name="select_services_you_provide">Select Product categories you sell</string>
    <string name="select_categories">Select Categories</string>
    <string name="select_services">Select Services</string>
    <string name="sell_electronics">Sell Electronics</string>
    <string name="insurance">Insurance</string>
    <string name="amc">AMC</string>
    <string name="repair">Repair</string>
    <string name="authorised_services_center">Authorised Service Center</string>
    <string name="select_categories_asc">Select categories for which you provide\Aauthorised services</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_categories_brand">Select brand for which you provide\nAuthorised service.</string>
    <string name="search_brand">Search brand by name</string>
    <string name="select_service_categories">Select Service Categories</string>
    <string name="select_category_brand">Select Category Brands</string>
    <string name="select_services_categories">Select categories of the services you provide</string>
    <string name="select_brand_you_select">Which brands do you sell in each category?</string>
    <string name="sell_accessories">Sell Accessories</string>
    <string name="default_notification_channel_id">BinBill Partner</string>
    <string name="state">State</string>
    <string name="locality">Locality</string>
    <string name="view">View</string>
    <string name="search">Search</string>
    <string name="something_went_wrong">Oh crap! Something went wrong</string>
    <string name="select_brands">Select Brands</string>
    <string name="dashboard">Dashboard</string>
    <string name="verification">Verification</string>
    <string name="orders">Orders</string>
    <string name="my_customers">My Customers</string>
    <string name="assisted_services">Home Services</string>
    <string name="rupee_sign">₹</string>
    <plurals name="file_uploaded">
        <item quantity="one">%d File Uploaded</item>
        <item quantity="other">%d Files Uploaded</item>
    </plurals>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_offers">Promote Offers</string>
    <string name="manage_your_products_categories">Manage Your Products Categories</string>
    <string name="no_offers_added">Simply scan the Discount Offer Item SKU with the Bar Code Scanner and publish it for your customers.</string>
    <string name="add_offers">Add Offer</string>
    <string name="no_offers">No Offers!</string>
    <string name="no_general_offers">Simply create and add your own Offer here to publish it for your customers.</string>
    <string name="extra_no_offers">These are Suggested Discount Offers that you can promote to your customers. Currently, there are no Suggested Discount Offers.</string>
    <string name="bogo_no_offers">Simply scan the BOGO Offer Item SKU with the Bar Code Scanner and publish it for your customers</string>
    <string name="my_offers">My Offers</string>
    <string name="create_new_offer">Create New Offer</string>
    <string name="update_new_offer">Update Offer</string>
    <string name="upload_offer_image">Upload Offer Image</string>
    <string name="select_from_default">Choose image from default templates</string>
    <string name="offer_name">Offer Name</string>
    <string name="offer_description">Offer Description</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="create_offer">Create Offer</string>
    <string name="create_image_offer">Create Image Offer</string>
    <string name="create_video_offer">Create Video Offer</string>
    <string name="create_group_coupon">Create Group Coupon</string>
    <string name="upload_from">Upload From</string>
    <string name="take_picture">Take Picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="delete_offer">Are you sure you want to delete this offer?</string>
    <string name="delete_service">Are you sure you want to delete this service?</string>
    <string name="string_no">No</string>
    <string name="string_yes">Yes</string>
    <string name="select_user">Select Customer</string>
    <string name="no_users_added">You donot have any other Customers to add. Please add Customers from My Customer section first.</string>
    <string name="no_users_linked">You have not published this offer for any Customers yet. Please add Customers for this offer.</string>
    <string name="add_users">Add Customer Now</string>
    <string name="publish">Publish</string>
    <string name="offer_published_success">Your offer is successfully published for the selected Customer!</string>
    <string name="offer_successfully_added">Offer successfully added to your list.</string>
    <string name="offer_published">Offer Published</string>
    <string name="ok">Ok</string>
    <string name="linked_user">Users With The Offer</string>
    <plurals name="transaction">
        <item quantity="one">%d Transaction</item>
        <item quantity="other">%d Transactions</item>
    </plurals>
    <string name="credit">Credit: </string>
    <string name="points">Loyalty Discount: </string>
    <string name="transactions">Transactions</string>
    <string name="transactions_report">Transactions Report</string>
    <string name="add_credit">Add Credit</string>
    <string name="add_points">Add Loyalty Discount</string>
    <string name="add_customer">Add Customer Now</string>
    <string name="add_new_offer">Add New Offer</string>
    <string name="add_customer_invite">Invite Customer</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="search_by_mobile">Search customer by mobile number</string>
    <string name="search_and_add_your_customer_from_binbill_network">Search and Add your customer from BinBill Network</string>
    <string name="select_banner">Select Banner</string>
    <string name="type_offer_title">Type your text here...</string>
    <string name="your_text">Your text here...</string>
    <string name="upload_banner">Upload Banner</string>
    <string name="please_add_assisted_service">Boost your income by assisting your Customers with Home Services viz. Domestic Help, Cleaner, Carpenter etc.</string>
    <string name="add_service_now">Add Service Now</string>
    <string name="name_of_service">Name of Service Guide</string>
    <string name="phone_number">Phone Number</string>
    <string name="upload_adhar">Upload Aadhar Card Image</string>
    <string name="type_of_service">Type of Services</string>
    <string name="price">₹ Price (additional 30 min)</string>
    <string name="save">Save</string>
    <string name="assisted_service_added">Service added successfully</string>
    <string name="upload_profile_image">Please upload Profile image</string>
    <string name="add_additional_service">Service</string>
    <string name="add_additional_service_header">Add Service</string>
    <string name="sku_management">SKU Management</string>
    <string name="manage_categories"> -   Manage Categories</string>
    <string name="manage_brands"> -   Manage Brands</string>
    <string name="manage_sku"> -   Manage SKUs</string>
    <string name="delivery_agents">Delivery Agents</string>
    <string name="loyalty_rules">Loyalty Rules</string>
    <string name="logout">Logout</string>
    <string name="app_version">App Version: %1$s</string>
    <string name="share_app">Share App</string>
    <string name="email_us">Email Us</string>
    <string name="call_us">Call Us</string>
    <string name="reports">Reports</string>
    <string name="new_version_text">The new version brings a whole host of fantastic features and improvements</string>
    <string name="set_loyalty_rules_hyphen">- Set Loyalty Rules</string>
    <string name="binbill_got_upgraded">BinBill Partner got upgraded</string>
    <string name="update_now">Update Now</string>
    <string name="not_now">Not Now</string>
    <string name="faqs">FAQs</string>
    <string name="enable_auto_credit">- Enable Auto Mode</string>
    <string name="subscribe_for_notification">Get Notifications</string>
</resources>