<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_delivery"
                android:drawablePadding="@dimen/dimen_15dp"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="1sp"
                android:padding="@dimen/dimen_15dp"
                android:text="@string/home_delivery"
                android:textColor="@color/text_44"
                android:textSize="@dimen/dimen_14dp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/tv_availability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/ToggleTheme"
                android:layout_gravity="center"
                android:minHeight="@dimen/dimen_30dp"
                android:visibility="visible"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sku_management"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#edf8fd"
            android:orientation="vertical"
            android:padding="@dimen/dimen_15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_sku"
                android:drawablePadding="@dimen/dimen_15dp"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="1sp"
                android:text="@string/sku_management"
                android:textColor="@color/text_44"
                android:textSize="@dimen/dimen_14dp" />

            <TextView
                android:id="@+id/tv_manage_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_60dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:fontFamily="sans-serif-light"
                android:lineSpacingExtra="13.5sp"
                android:text="@string/manage_categories"
                android:textColor="@color/text_44"
                android:textSize="@dimen/dimen_14dp" />

            <TextView
                android:id="@+id/tv_manage_brands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_60dp"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:fontFamily="sans-serif-light"
                android:lineSpacingExtra="13.5sp"
                android:text="@string/manage_brands"
                android:textColor="@color/text_44"
                android:textSize="@dimen/dimen_14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_60dp"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:fontFamily="sans-serif-light"
                android:lineSpacingExtra="13.5sp"
                android:text="@string/manage_sku"
                android:textColor="@color/text_44"
                android:textSize="@dimen/dimen_14dp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_manage_delivery_boy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_delivery_agent_hamburger"
            android:drawablePadding="@dimen/dimen_15dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="1sp"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/delivery_agents"
            android:textColor="@color/text_44"
            android:textSize="@dimen/dimen_14dp" />


        <LinearLayout
            android:id="@+id/ll_loyalty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#edf8fd"
            android:orientation="vertical"
            android:padding="@dimen/dimen_15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_loyalty_rules"
                android:drawablePadding="@dimen/dimen_15dp"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="1sp"
                android:text="@string/loyalty_rules"
                android:textColor="@color/text_44"
                android:textSize="@dimen/dimen_14dp" />

            <TextView
                android:id="@+id/tv_layalty_rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_60dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:fontFamily="sans-serif-light"
                android:lineSpacingExtra="13.5sp"
                android:text="@string/set_loyalty_rules_hyphen"
                android:textColor="@color/text_44"
                android:textSize="@dimen/dimen_14dp" />

            <TextView
                android:id="@+id/tv_auto_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_60dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:fontFamily="sans-serif-light"
                android:lineSpacingExtra="13.5sp"
                android:text="@string/enable_auto_credit"
                android:textColor="@color/text_44"
                android:textSize="@dimen/dimen_14dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_faq"
            android:drawablePadding="@dimen/dimen_15dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="1sp"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/faqs"
            android:textColor="@color/text_44"
            android:textSize="@dimen/dimen_14dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_insight"
            android:drawablePadding="@dimen/dimen_15dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="1sp"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/reports"
            android:textColor="@color/text_44"
            android:textSize="@dimen/dimen_14dp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tv_call_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_call"
            android:drawablePadding="@dimen/dimen_15dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="1sp"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/call_us"
            android:textColor="@color/text_44"
            android:textSize="@dimen/dimen_14dp" />


        <TextView
            android:id="@+id/tv_email_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/dimen_15dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="1sp"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/email_us"
            android:textColor="@color/text_44"
            android:textSize="@dimen/dimen_14dp" />

        <TextView
            android:id="@+id/tv_subscribe_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_subscribe"
            android:drawablePadding="@dimen/dimen_15dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="1sp"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/subscribe_for_notification"
            android:textColor="@color/text_44"
            android:textSize="@dimen/dimen_14dp" />

        <TextView
            android:id="@+id/tv_share_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_share_grey"
            android:drawablePadding="@dimen/dimen_15dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="1sp"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/share_app"
            android:textColor="@color/text_44"
            android:textSize="@dimen/dimen_14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_15dp"
            android:paddingTop="@dimen/dimen_15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_12dp"
                android:src="@drawable/ic_app_version" />

            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="1sp"
                android:paddingBottom="@dimen/dimen_2dp"
                android:paddingLeft="@dimen/dimen_8dp"
                android:text="@string/app_version"
                android:textColor="@color/text_44"
                android:textSize="@dimen/dimen_14dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_logout"
            android:drawablePadding="@dimen/dimen_15dp"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="1sp"
            android:padding="@dimen/dimen_15dp"
            android:text="@string/logout"
            android:textColor="@color/text_44"
            android:textSize="@dimen/dimen_14dp" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>