<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/dimen_2dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_monday"
            android:layout_width="@dimen/dimen_35dp"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@drawable/day_selector"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:tag="0"
            android:text="@string/monday"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tuesday"
            android:layout_width="@dimen/dimen_35dp"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@drawable/day_selector"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:tag="0"
            android:text="@string/tuesday"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_wednesday"
            android:layout_width="@dimen/dimen_35dp"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@drawable/day_selector"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:tag="0"
            android:text="@string/wednesday"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_thursday"
            android:layout_width="@dimen/dimen_35dp"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@drawable/day_selector"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:tag="0"
            android:text="@string/thursday"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_friday"
            android:layout_width="@dimen/dimen_35dp"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@drawable/day_selector"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:tag="0"
            android:text="@string/friday"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_saturday"
            android:layout_width="@dimen/dimen_35dp"
            android:layout_height="@dimen/dimen_35dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@drawable/day_selector"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:tag="0"
            android:text="@string/saturday"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_sunday"
            android:layout_width="@dimen/dimen_35dp"
            android:layout_height="@dimen/dimen_35dp"
            android:background="@drawable/day_selector"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:tag="0"
            android:text="@string/sunday"
            android:textColor="@color/color_white"
            android:textSize="@dimen/dimen_12dp" />
    </LinearLayout>

</LinearLayout>