<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/color_white"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/image"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:fontFamily="sans-serif-light"
                android:gravity="top|center_horizontal"
                android:paddingLeft="@dimen/dimen_20dp"
                android:paddingRight="@dimen/dimen_20dp"
                android:text="@string/binbill_got_upgraded"
                android:textColor="@color/color_black"
                android:textSize="@dimen/dimen_16dp" />

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:gravity="top|center_horizontal"
                android:text="@string/new_version_text"
                android:textColor="@color/color_black"
                android:textSize="@dimen/dimen_14dp" />

            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:background="@drawable/cyclinder_bg_filled"
                android:text="@string/update_now"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/not_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_60dp"
                android:layout_marginRight="@dimen/dimen_60dp"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:gravity="center"
                android:text="@string/not_now"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16dp"
                android:visibility="visible" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>